landing_page.css
.main-hero {
    display: flex;
    background-color: var(--bg-dark);
    padding: 60px 0;
}

.main-hero .container {
    gap: 10px;
}

.main-hero-title {
    color: var(--bright-primary-text);
    font-size: var(--extra-large-font);
}

.main-hero-subtext {
    color: var(--bright-secondary-text);
    font-size: var(--small-font);
}

.main-hero img {
    width: 100%;
    max-height: 300px;
    margin: auto;
    object-fit: cover;
}

.main-hero-img {
    margin: auto;
}

.main-hero-text {
    display: flex;
    flex-direction: column;
}

/* SECOND SECTION  */

.why-plantopia {
    display: flex;
    flex-direction: column;
}

.why-plantopia h2 {
    text-align: center;
    font-size: 36px;
}

.why-plantopia section {
    justify-content: space-between;
    padding: 16px;
}

.item {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 20%;
}

.item p {
    text-align: center;
}

.reason-img {
    height: 150px;
    width: 150px;
    border-radius: var(--border-radius);
    border: 4px solid var(--accent-color);
    object-fit: cover;
}

/* QUOTE SECTION */

.quote-section {
    background-color: #e5e7eb;
    padding: 20px 0;
}

.quote-section p:first-child {
    font-family: 'Roboto-LightItalic', sans-serif;
    color: #1f2937;
}

.quote {
    font-size: 36px;
}

.quote-name {
    font-size: 24px;
}

@media (max-width: 599px) {
    .item {
        max-width: unset;
    }
}

